--- a/Jboard1/src/main/webapp/css/style.css
+++ b/Jboard1/src/main/webapp/css/style.css
@@ -383,7 +383,10 @@ footer > p {
 #board > .view > .commentList > article {overflow: hidden;}        
 #board > .view > .commentList .nick {}
 #board > .view > .commentList .date {}
-#board > .view > .commentList .content {padding: 10px;}
+#board > .view > .commentList .content {
+	padding: 10px;
+	white-space: pre-wrap;
+	}
 #board > .view > .commentList > article > div {float: right;}
 #board > .view > .commentList > article .remove {}
 #board > .view > .commentList > article .modify {}
